--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -64,6 +64,7 @@ nav a:hover{
     -webkit-background-clip: text;
     background-position: -1100px 0;
     animation: backcolor 4s linear infinite alternate;
+    user-select: none;
 }
 @keyframes backcolor {
     100%{
@@ -87,13 +88,17 @@ section{
     padding: 10px 50px;
     position: relative;
     width: 50%;
-    animation:  movedown 1s linear forwards infinite alternate;
+    animation:  movedown 4s linear forwards infinite alternate;
     opacity: 0;
 }
 @keyframes movedown {
     0%{
         opacity: 1;
         transform: translateY(-30px);
+    }
+    50%{
+        opacity: 1;
+        transform: translateY(-15px);
     }
     100%{
         opacity: 1;
