--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -9,6 +9,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+}
+*::-webkit-scrollbar{
+    width: 0vw;
+    scrollbar-color: purple;
+}
+*::-webkit-scrollbar-thumb{
+    background-color: rgb(241, 170, 241);
+}
+*::-webkit-scrollbar-track{
+    background-color: rgb(226, 138, 226);
 }
 .container {
     width: 100%;
@@ -20,6 +31,7 @@
     filter: brightness(75%);
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    
     
 }
 nav {
@@ -71,9 +83,8 @@ nav a:hover{
         background-position: 0 0;
     }
 }
-
-section{
-    height: 100vh;
+#two,#one{
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,17 +99,13 @@ section{
     padding: 10px 50px;
     position: relative;
     width: 50%;
-    animation:  movedown 4s linear forwards infinite alternate;
+    animation:  movedown 1s linear forwards;
     opacity: 0;
 }
 @keyframes movedown {
     0%{
         opacity: 1;
         transform: translateY(-30px);
-    }
-    50%{
-        opacity: 1;
-        transform: translateY(-15px);
     }
     100%{
         opacity: 1;
@@ -107,16 +114,28 @@ section{
     
 }
 .container-2:nth-child(1){
-    animation-delay: 1s;
+    animation-delay: 0s;
 }
 .container-2:nth-child(2){
-    animation-delay: 2s;
+    animation-delay: 1s;
 }
 .container-2:nth-child(3){
-    animation-delay: 3s;
+    animation-delay: 2s;
 }
 .container-2:nth-child(4){
+    animation-delay: 3s;
+}
+.container-2:nth-child(5){
     animation-delay: 4s;
+}
+.container-2:nth-child(6){
+    animation-delay: 5s;
+}
+.container-2:nth-child(7){
+    animation-delay: 6s;
+}
+.container-2:nth-child(8){
+    animation-delay: 7s;
 }
 .text{
     padding: 20px 30px;
@@ -124,6 +143,8 @@ section{
     position: relative;
     border-radius: 6px;
     font-size: 15px;
+    opacity: 0.7;
+    
 }
 .left-container{
     left: 0;
@@ -152,7 +173,8 @@ section{
     left: 50%;
     margin-left: -3px;
     z-index: -1;
-    animation: moveline 6s linear forwards;
+    animation: moveline 5s linear forwards;
+    
 }
 @keyframes moveline {
     0%{
@@ -223,5 +245,45 @@ section{
 
     } 
 }
+.icons img{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    animation: icons 7s linear infinite;
+}
+section .icons{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    bottom: -70px;
+    margin: 0;
+}
+@keyframes icons{
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    70%{
+        opacity: 1;
 
+    }
+    100%{
+        transform: translateY(-80vh);
+        opacity: 0;
+    }
+}
 
+mark{
+    background-color: #7b89da;
+    color: white;
+}
+.extrait:hover{
+    opacity: .7;
+    cursor: pointer;
+    scale: 1.5;
+}
