--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -13,13 +13,7 @@
 }
 *::-webkit-scrollbar{
     width: 0vw;
-    scrollbar-color: purple;
-}
-*::-webkit-scrollbar-thumb{
-    background-color: rgb(241, 170, 241);
-}
-*::-webkit-scrollbar-track{
-    background-color: rgb(226, 138, 226);
+
 }
 .container {
     width: 100%;
@@ -83,7 +77,7 @@ nav a:hover{
         background-position: 0 0;
     }
 }
-#two,#one{
+section{
     
     display: flex;
     justify-content: center;
@@ -120,22 +114,22 @@ nav a:hover{
     animation-delay: 1s;
 }
 .container-2:nth-child(3){
-    animation-delay: 2s;
+    animation-delay: 1.5s;
 }
 .container-2:nth-child(4){
-    animation-delay: 3s;
+    animation-delay: 2s;
 }
 .container-2:nth-child(5){
-    animation-delay: 4s;
+    animation-delay: 2.5s;
 }
 .container-2:nth-child(6){
-    animation-delay: 5s;
+    animation-delay: 3s;
 }
 .container-2:nth-child(7){
-    animation-delay: 6s;
+    animation-delay: 3.5s;
 }
 .container-2:nth-child(8){
-    animation-delay: 7s;
+    animation-delay: 4.2s;
 }
 .text{
     padding: 20px 30px;
@@ -190,7 +184,13 @@ nav a:hover{
 .text small{
     display: inline-block;
     margin-bottom: 15px;
+    font-weight: bold;
 }
+.text:hover{
+    scale: 1.1;
+    cursor: pointer;
+}
+
 .left-container-arrow{
     height: 0;
     width: 0;
@@ -245,40 +245,8 @@ nav a:hover{
 
     } 
 }
-.icons img{
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    animation: icons 7s linear infinite;
-}
-section .icons{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: absolute;
-    bottom: -70px;
-    margin: 0;
-}
-@keyframes icons{
-    0%{
-        transform: translateY(0);
-        opacity: 0;
-    }
-    50%{
-        opacity: 1;
-    }
-    70%{
-        opacity: 1;
-
-    }
-    100%{
-        transform: translateY(-80vh);
-        opacity: 0;
-    }
-}
-
 mark{
+   animation-delay: 5s;
     background-color: #7b89da;
     color: white;
 }
