--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -36,6 +36,7 @@ nav {
     display: flex;
     align-items: stretch;
     justify-content: space-around;
+    
 }
 nav .logo {
     width: 250px;
@@ -178,13 +179,24 @@ section{
         height: 100%;
     }
 }
+.text p{
+    background-image: linear-gradient(to right, #833ab4, #fd1d1d,#fcb045);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .text h2{
     font-weight: 600;
+    background-image: linear-gradient(to right, #833ab4, #fd1d1d,#fcb045);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .text small{
     display: inline-block;
     margin-bottom: 15px;
     font-weight: bold;
+    background-image: linear-gradient(to right, #833ab4, #fd1d1d,#fcb045);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .text:hover{
     scale: 1.1;
@@ -246,9 +258,12 @@ section{
     } 
 }
 mark{
-   animation-delay: 5s;
-    background-color: #7b89da;
-    color: white;
+    background-image: linear-gradient(to right, #833ab4, #fd1d1d,#fcb045);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bolder;
+    font-size: 1.5rem;
+
 }
 .extrait:hover{
     opacity: .7;
